--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="index-style.css" />
   </head>
-  <body>
+  <body data-username="<%= user.username %>">
     <%- include("partials/navbar", {user: user}) %>
 
     <main>
@@ -87,5 +87,7 @@
       </div>
     </main>
     <%-include("partials/messages")%>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
   </body>
 </html>
