--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
         <!-- Chat Window -->
         <div class="chat-window">
           <% if (chatWith) { %>
-          <h3>Chat with <%= chatWith %></h3>
+          <h3><%= chatWith %></h3>
 
           <div class="messages">
             <% if (messages && messages.length > 0) { %> <%
