--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %> - Chatter App</title>
     <link rel="stylesheet" href="/navbar-footer.css" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/style-new.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
