--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Chatter</title>
     <link rel="stylesheet" href="/signup-login.css" />
     <link rel="stylesheet" href="/navbar-footer.css" />
