--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="logo">🦜 Chatter</div>
+  <div class="logo">&nbsp;&nbsp;🦜Chatter</div>
   <ul>
     <% if (user) { %>
     <li>
